# outbreak-probabilities

./: .gitignore  .readthedocs.yml  README.md  outbreak_pipeline.ipynb  pyproject.toml  requirments.txt  setup.py  version_info.py
.github/: os_versions.yml  python_versions.yml
.github/workflows/: cover.yml  python_versions.yml  style.yml
.github/workflows /: CI_workflow.yml
data/: README.md  simulated_cases_and_serial_interval_and_weights.csv
docs/: Additional.html  Analyticalmeth.html  ML.html  PMOprediction.html  TMpage.html  analysispage.html  analyticalcalc.py  analyticapp.html  approaches.html  convergence.html  index.html  pmo_comparison.json  pmo_prediction.py  predict_api.py  pyscript.json  styles.css  trajapproach.html  trajmatch.py
docs/models/models_3weeks/: ML_3weeks_RF.pkl
docs/models/models_4weeks/: ML_4weeks_RF.pkl
notebooks/: ML_pipeline.ipynb  outbreak_full_pipeline.ipynb
src/outbreak_probabilities/: README.md  predict.py  runner.py  version_info.py
src/outbreak_probabilities/analytic/: README.md  analytical.py  analytical_refractor.py  analyticalcalc.py
src/outbreak_probabilities/compare/: README.md  compare.py  compare_combined.py
src/outbreak_probabilities/docs/: analyticapp.html  index.html  mathapproach.html  mlapproach.html  styles.css
src/outbreak_probabilities/gui/: README.md
src/outbreak_probabilities/machine_learning/: ML.py  ML_2weeks.py  ML_3weeks.py  ML_4weeks.py  ML_5weeks.py  ML_Sim.py  ML_different_data_sizes.py  PLot_GBRF_different_data_sizes.py  Plot_ML_Sim.py  Plot_ML_different_data_sizes.py  README.md  generate_prediction_grid.py  metrics_plots.py  prediction_grid_comparison.csv  prediction_results.csv
src/outbreak_probabilities/simulate/: README.md  batch_processing.py  benchmark.py  calculate_serial_weights.py  generate_single_trajectory.py  plot_traj.py  plot_traj_refractor.py  run_this_file_for_misc_plots.py  run_this_file_for_weekly_plots.py  run_this_file_to_simulate_paths.py  simulate.py  simulate_paths_refractor.py
src/outbreak_probabilities/tests/: old_test_batch_processing.py  old_test_generate_single_trajectories.py  (+3 more)
(+33 files in other folders)
